--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,22 +1,25 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Overview &middot; {{ blog_name }}</title>
-		<link rel="stylesheet" href="{{ theme }}" />
-	</head>
-	<body>
-		<header>
-			{{ blog_name }}
-		</header>
-		<section>
-			<ul class="blog-entries">
-				<!-- <li><a href="#">blog entry</a></li> -->
-				{{ blog_entries }}
-			</ul>
-		</section>
-		<footer>~ Made with <a href="https://github.com/schdav/blogy">Blogy</a> ~</footer>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Index &middot; {{ blog_name }}</title>
+	<link rel="stylesheet" href="{{ theme }}" />
+</head>
+
+<body>
+	<header>
+		{{ blog_name }}
+	</header>
+	<section>
+		<ul class="blog-entries">
+			<!-- <li><a href="#"><span class="date">entry date</span>entry name</a></li> -->
+			{{ blog_entries }}
+		</ul>
+	</section>
+	<footer>Copyright {{ year }} &middot; Made with love and <a href="https://github.com/schdav/blogy">Blogy</a>.</footer>
+</body>
+
 </html>
