--- a/themes/default.css
+++ b/themes/default.css
@@ -1,78 +1,95 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Roboto:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:700|Noto+Sans:400,400i,700,700i&display=swap');
 
 /* body */
 
 body {
-	background-color: #eeeeee;
-	color: #303841;
-	font-family: 'Roboto', sans-serif;
-	margin: 0 auto;
-	width: 600px;
+  color: #222831;
+  font-family: 'Noto Sans', sans-serif;
+  margin: 0 auto;
+  max-width: 460px;
+  padding: 0 20px;
 }
 
 body a {
-	color: #303841;
+  color: #222831;
 }
 
 body a:hover {
-	color: #ff5722;
+  color: #00adb5;
 }
 
 /* header & footer */
 
 header {
-	font-family: 'Roboto Slab', serif;
-	font-size: 2.5em;
-	margin: 50px 0 25px;
+  font-family: 'Inconsolata', monospace;
+  font-size: 2.5em;
+  font-weight: 700;
+  margin: 50px 0 25px;
 }
 
 footer {
-	font-size: .8em;
-	margin: 25px 0;
+  border-top: 1px solid #393e46;
+  color: #393e46;
+  font-size: .7em;
+  margin: 25px 0;
+  padding-top: 25px;
 }
 
-header, footer {
-	text-align: center;
+header,
+footer {
+  text-align: center;
 }
 
-header a, footer a {
-	text-decoration: none;
+footer a {
+  color: #393e46;
+  text-decoration: none;
 }
 
 /* section */
 
 section {
-	border-bottom: 1px solid #ff5722;
-	border-top: 1px solid #ff5722;
+  line-height: 1.7em;
 }
 
 section p.infos {
-	font-size: .8em;
+  color: #393e46;
+  font-size: .8em;
 }
 
 section p.title {
-	font-family: 'Roboto Slab', serif;
-	font-size: 1.5em;
+  font-family: 'Inconsolata', monospace;
+  font-size: 1.5em;
+  font-weight: 700;
+}
+
+section p.back {
+  font-size: .8em;
+  margin-top: 25px;
 }
 
 section p.back a {
-	text-decoration: none;
-}
-
-code {
-	font-family: 'Roboto Mono', monospace;
+  text-decoration: none;
 }
 
 /* blog entries */
 
 .blog-entries {
-	line-height: 1.5em;
-	list-style: none;
-	margin: 50px 0;
-	padding: 0;
-	text-align: center;
+  list-style: none;
+  margin: 50px 0;
+  padding: 0;
+  text-align: center;
 }
 
 .blog-entries a {
-	text-decoration: none;
+  text-decoration: none;
+}
+
+.blog-entries a .date {
+  font-family: 'Inconsolata', monospace;
+  font-weight: 700;
+  margin-right: 10px;
+}
+
+.blog-entries a:hover .date {
+  color: #222831;
 }
