--- a/themes/default.css
+++ b/themes/default.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata:700|Noto+Sans:400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap');
 
 /* body */
 
 body {
-  color: #222831;
-  font-family: 'Noto Sans', sans-serif;
+  color: #555;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
   margin: 0 auto;
   max-width: 460px;
   padding: 0 20px;
 }
 
 body a {
-  color: #222831;
+  color: #555;
 }
 
 body a:hover {
@@ -21,16 +22,16 @@ body a:hover {
 /* header & footer */
 
 header {
-  font-family: 'Inconsolata', monospace;
   font-size: 2.5em;
-  font-weight: 700;
+  letter-spacing: 5px;
   margin: 50px 0 25px;
+  text-transform: uppercase;
 }
 
 footer {
-  border-top: 1px solid #393e46;
-  color: #393e46;
-  font-size: .7em;
+  border-top: 1px solid #888;
+  color: #888;
+  font-size: .8em;
   margin: 25px 0;
   padding-top: 25px;
 }
@@ -41,25 +42,23 @@ footer {
 }
 
 footer a {
-  color: #393e46;
+  color: #888;
   text-decoration: none;
 }
 
 /* section */
 
 section {
-  line-height: 1.7em;
+  line-height: 1.8em;
 }
 
 section p.infos {
-  color: #393e46;
+  color: #888;
   font-size: .8em;
 }
 
 section p.title {
-  font-family: 'Inconsolata', monospace;
   font-size: 1.5em;
-  font-weight: 700;
 }
 
 section p.back {
@@ -82,14 +81,14 @@ section p.back a {
 
 .blog-entries a {
   text-decoration: none;
+  vertical-align: middle;
 }
 
 .blog-entries a .date {
-  font-family: 'Inconsolata', monospace;
-  font-weight: 700;
+  font-size: .8em;
   margin-right: 10px;
 }
 
 .blog-entries a:hover .date {
-  color: #222831;
+  color: #555;
 }
