Make comments more clear

--- a/themes/default.scss
+++ b/themes/default.scss
@@ -55,7 +55,7 @@ footer {
   }
 }
 
-/* section */
+/* text */
 
 section {
   line-height: 1.8em;
@@ -85,7 +85,7 @@ h2 {
   margin-top: 25px;
 }
 
-/* blog entries */
+/* overview */
 
 .blog-entries {
   margin: 50px 0;
