--- a/templates/article.html
+++ b/templates/article.html
@@ -13,7 +13,7 @@
       <h1>{{ blog_name }}</h1>
     </header>
     <div class="infos">
-      {{ date }} &middot; {{ time_to_read }} reading time
+      {{ date }} &middot; ~ {{ time_to_read }} reading time
     </div>
     <section>
       <h2>{{ title }}</h2>
