Add description and years

--- a/templates/article.html
+++ b/templates/article.html
@@ -23,8 +23,8 @@
       <a href="../../../">&lt;&lt; Index</a>
     </div>
     <footer>
-      Copyright {{ year }} &middot; Made with love and
-      <a href="https://github.com/schdav/blogy">Blogy</a>.
+      Copyright {{ year }} &middot; Made with
+      <a href="https://github.com/schdav/blogy">Blogy</a>
     </footer>
   </body>
 </html>
