--- a/templates/overview.html
+++ b/templates/overview.html
@@ -3,6 +3,7 @@
 <html lang="{{ language }}">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="{{ description }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Index &middot; {{ blog_name }}</title>
     <link rel="stylesheet" href="{{ theme }}" />
@@ -11,17 +12,14 @@
   <body>
     <header>
       <h1>{{ blog_name }}</h1>
+      <p>{{ description }}</p>
     </header>
     <section class="blog-entries">
-      <h2>Articles</h2>
-      <ul>
-        <!-- <li><a href="#"><span class="date">entry date</span>entry title</a></li> -->
-        {{ blog_entries }}
-      </ul>
+      {{ blog_entries }}
     </section>
     <footer>
-      Copyright {{ year }} &middot; Made with love and
-      <a href="https://github.com/schdav/blogy">Blogy</a>.
+      Copyright {{ year }} &middot; Made with
+      <a href="https://github.com/schdav/blogy">Blogy</a>
     </footer>
   </body>
 </html>
